--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-storybook": "storybook build",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
     "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
-    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json}"
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json}",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "MIT",
@@ -48,8 +49,10 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.1",
+    "husky": "^8.0.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "lint-staged": "^14.0.0",
     "postcss": "^8.4.27",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.2",
