--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json} --max-warnings=0",
     "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json}",
     "prepare": "husky install"
@@ -74,7 +74,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css,json,md}": [
-      "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+      "eslint --fix src/**/*.{js,jsx,ts,tsx,json} --max-warnings=0",
       "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json}"
     ]
   },
